--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <strong>Success!</strong> Represents a Successful or positive action.</br>
         <strong>Info!</strong> Represents a neutral information change</br>
         <strong>Warning!</strong> Represents a warning that needs attention</br>
+        <strong>Error!</strong> Represents a error that needs attention</br>
     </body>
 </html>
